--- a/assets/index.html
+++ b/assets/index.html
@@ -16,7 +16,7 @@
   <meta name="author" content="TurystyczneTriCity@gmail.com">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Boilerplate</title>
+  <title>TurystyczneTriCity</title>
 
   <!-- Set render engine for 360 browser -->
   <meta name="renderer" content="webkit">
