Searchbar with autocomplete for CardList + styling in css

--- a/assets/index.html
+++ b/assets/index.html
@@ -18,6 +18,10 @@
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>TurystyczneTriCity</title>
 
+    <!-- Autocomplete for Cards  -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API_KEY&libraries=places"></script>
+
+
   <!-- Set render engine for 360 browser -->
   <meta name="renderer" content="webkit">
 
