fix for doubled google API connect

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
-<!--[if lte IE 7 ]><html class="no-js ie lte7 lte8 lte9 widgets"><![endif]-->
-<!--[if IE 8 ]><html class="no-js ie ie8 lte8 lte9 widgets"><![endif]-->
-<!--[if IE 9 ]><html class="no-js ie ie9 lte9 widgets"><![endif]-->
+<!--[if lte IE 7 ]>
+<html class="no-js ie lte7 lte8 lte9 widgets"><![endif]-->
+<!--[if IE 8 ]>
+<html class="no-js ie ie8 lte8 lte9 widgets"><![endif]-->
+<!--[if IE 9 ]>
+<html class="no-js ie ie9 lte9 widgets"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
 <html>
 <!--<![endif]-->
@@ -11,15 +14,16 @@
   <!-- Google hash fragments for Ajax crawl -->
   <!-- https://developers.google.com/webmasters/ajax-crawling/docs/getting-started -->
   <meta name="fragment" content="!">
-  <meta name="keywords" content="TurystyczneTriCity" />
-  <meta name="description" content="TurystyczneTriCity" />
+  <meta name="keywords" content="TurystyczneTriCity"/>
+  <meta name="description" content="TurystyczneTriCity"/>
   <meta name="author" content="TurystyczneTriCity@gmail.com">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>TurystyczneTriCity</title>
 
-    <!-- Autocomplete for Cards  -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API_KEY&libraries=places"></script>
+  <!-- Google API connect  -->
+  <script type="text/javascript"
+          src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API_KEY&libraries=places"></script>
 
 
   <!-- Set render engine for 360 browser -->
@@ -48,17 +52,19 @@
   <!-- <link rel="canonical" href="http://www.kuang.it/"> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
   <style type="text/css">
-  body {font-family: "Roboto","Segoe UI","Lucida Grande",Helvetica,Arial,"Microsoft YaHei",FreeSans,Arimo,"Droid Sans","wenquanyi micro hei","Hiragino Sans GB","Hiragino Sans GB W3",FontAwesome,sans-serif;}
+    body {
+      font-family: "Roboto", "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", FontAwesome, sans-serif;
+    }
   </style>
 </head>
 <body>
-  <!--[if lt IE 9 ]>
-  <div style="width: 100%; background-color: yellow; padding: 20px;">
-    <a href="http://browsehappy.com/">Please upgrade your browser.</a>
-  </div>
-  <![endif]-->
-  <div id="site"></div>
-  <script src="./vendor.js"></script>
-  <script src="./app.js"></script>
+<!--[if lt IE 9 ]>
+<div style="width: 100%; background-color: yellow; padding: 20px;">
+  <a href="http://browsehappy.com/">Please upgrade your browser.</a>
+</div>
+<![endif]-->
+<div id="site"></div>
+<script src="./vendor.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
