--- a/assets/index.html
+++ b/assets/index.html
@@ -22,8 +22,8 @@
   <title>TurystyczneTriCity</title>
 
   <!-- Google API connect  -->
-  <script type="text/javascript"
-          src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API_KEY&libraries=places"></script>
+  <!--<script type="text/javascript"-->
+          <!--src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_API_KEY&libraries=places"></script>-->
 
 
   <!-- Set render engine for 360 browser -->
