--- a/assets/index.html
+++ b/assets/index.html
@@ -36,16 +36,16 @@
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="./imgs/app-icon72x72@2x.png">
+  <link rel="icon" sizes="192x192" href="./imgs/favicon.png">
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="TurystyczneTriCity"/>
-  <link rel="apple-touch-icon-precomposed" href="./imgs/app-icon72x72@2x.png">
+  <link rel="apple-touch-icon-precomposed" href="./imgs/favicon.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="./imgs/app-icon72x72@2x.png">
+  <meta name="msapplication-TileImage" content="./imgs/favicon.png">
   <meta name="msapplication-TileColor" content="#0e90d2">
 
   <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
