--- a/assets/index.html
+++ b/assets/index.html
@@ -19,6 +19,7 @@
   <meta name="author" content="TurystyczneTriCity@gmail.com">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="theme-color" content="#00bcd4">
   <title>TurystyczneTriCity</title>
 
   <!-- Set render engine for 360 browser -->
