--- a/assets/index.html
+++ b/assets/index.html
@@ -19,7 +19,14 @@
   <meta name="author" content="TurystyczneTriCity@gmail.com">
   <meta name="viewport"
         content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <!-- Android -->
   <meta name="theme-color" content="#00bcd4">
+  <meta name="msapplication-navbutton-color" content="#00bcd4">
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#00bcd4">
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title>TurystyczneTriCity</title>
 
   <!-- Set render engine for 360 browser -->
