--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,7 @@
 <!--[if IE 9 ]>
 <html class="no-js ie ie9 lte9 widgets"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
-<html>
+<html lang="pl-PL">
 <!--<![endif]-->
 <head>
   <meta charset="utf-8">
